@@ -1,4 +1,5 @@
 * Fixed bug with verifying maps
+* Added handling of vararg methods
 
 ----------------------
 - Version 0.3.2
